Fixes OGNL-74. Used a 1.5 only jre feature of Integer.valueOf(int)